migrate sandbox component 'caseditor-corpus-server-plugin' to Java 11
- adjusts parent project (org.apache.apache) to version 18
- adjusts Java language level to 11
- updates `uimaj` dependencies to version 3.3.1
- updates `jersey` dependencies to version 1.19.4
- cures some deprecation issues
- improves existing JavaDoc